# Bit-Crab

./: Cargo.toml  README.md
src/: goals  main.rs  test3.torrent
src/adapters/: mod.rs
src/adapters/controllers/: mod.rs  torrent_controller.rs
src/adapters/presenters/: mod.rs  torrent_presenter.rs
src/domain/: entities.rs  errors.rs  mod.rs  peers.rs
src/domain/entities/: file.rs  hashes.rs  info.rs  message.rs  mod.rs  peer.rs  piece.rs  torrent.rs
src/entities/: handshake.rs  message.rs  mod.rs  peer.rs  torrent.rs
src/usecases/: download_torrent.rs  extract_torrent_info.rs  mod.rs  parse_torrent_file.rs  peer_discovery.rs  peer_handshake.rs  peer_tracker.rs  perform_handshake.rs  read_file.rs  tracker_request.rs
src/usecases/utils/: generate_peer_id.rs  mod.rs
src/utils/: errors.rs  extract_torrent_metadata.rs  mod.rs
