[package]
name = "crab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.12"
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
sha1 = "0.10.1"
url = "2.5.2"
hex = "0.4.3"
urlencoding = "2.1.3"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.51"
bytes = "1.6.0"
thiserror = "1.0.61"
