[package]

name = "crab"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_bencode = "0.2.3"
serde_bytes = "0.11.12"
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
sha1 = "0.10.1"
anyhow = "1.0.51"
thiserror = "1.0.61"
hex = "0.4.3"
log = "0.4.21"
env_logger = "0.11.3"
rand = "0.9.0-alpha.1"
tokio-util = "0.7.11"
url = "2.5.2"
url_serde = "0.2.0"
serde_with = "3.8.1"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
bytes = "1.6.0"