[package]

name = "BitCrab"
version = "0.1.0"
edition = "2021"

[dependencies]

serde = { version = "1.0.203", features = ["derive"] }
serde_bencode = "0.2.4"
serde_urlencoded = "0.7.1"

tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
url = "2.5.2"
urlencoding = "2.1.3"

anyhow = "1.0.86"
thiserror = "1.0.61"

sha1 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
getset = "0.1.2"
bytes = "1.6.0"